# gem-cpp

./: .clang-format  CMakeLists.txt  README.md
report/: bib.yml  main.typ  template.typ
report/data/: determinant-definition  determinant-elimination  determinant-parallel  hilbert-parallel  hilbert-sequential
report/scripts/: plotter.py
scripts/: plotter.py
src/: main.cpp
src/core/: eliminable_matrix.hpp  matrix.hpp  permutations.hpp  system_of_equations.hpp
src/gem_lib/: eliminable_matrix.hpp  matrix.cpp  matrix.hpp  permutations.cpp  system_of_equations.cpp  system_of_equations.hpp
src/gem_tester/: main.cpp
